fix gift card size on mobile

--- a/giftcard.css
+++ b/giftcard.css
@@ -44,3 +44,19 @@
     font-size: 4rem;
     margin-bottom: 0;
 }
+
+@media only screen and (max-width: 768px) {
+    .giftcard-title {
+        font-size: 3rem;
+    }
+
+    .giftcard-content {
+        margin: 0rem;
+    }
+
+    .giftcard-info {
+        min-width: 100%;
+        width: 100%;
+        max-width: 100%;
+    }
+  }
